# clickup-api

./: .dockerignore  .gitignore  .user.yml  123.py  404.html  CODE_OF_CONDUCT.md  Dockerfile  README.md  __init__.py  docker-compose.yml  fast.py  index.html  mkdocs.yml  profiles.yml  pyproject.toml  render.yaml  run_api_requests.sh  run_with_ngrok.py  socket_test.py  test_get_clickup_data.py  test_load.py
.github/workflows/: ci_dw.yml  run_tests.yml
api/: BI_Projetos.py  api.py  index.html
api.pt/: index.html
backup/: index.html
clickup-api/src/api/: clickup_api.html
data/: dados_clickup_174940580.xlsx
dbt/: index.html
docker/: index.html
docker.pt/: index.html
docs/: api.md  api.pt.md  backup.md  docker.md  docker.pt.md  gh_actions.md  index.md  index.pt.md  main.md  main.pt.md  postgre.pt.md  redis.pt.md  routes.md  routes.pt.md  settings.pt.md  tests.md  utils.md
dwclickup/: dbt_project.yml
dwclickup/models/: schema.yml
dwclickup/models/staging/: check_colums.sql  leaders.sql  raw_tasks.sql  tasks.sql  tasks_cleaned.sql
gh_actions/: index.html
index.pt/: index.html
main/: index.html
main.pt/: index.html
postgre.pt/: index.html
redis/: index.html
redis.pt/: index.html
render/: index.html
render.pt/: index.html
routes/: index.html
routes.pt/: index.html
search/: search_index.json
settings.pt/: index.html
src/: fast.py  main.py
src/api/: clickup_api.py
src/cache/: redis_cache.py
src/config/: settings.py
src/db/: postgres.py
src/routes/: clickup_routes.py
src/utils/: date_utils.py  ganho_anual.py  regex_utils.py  task_utils.py  test.py  text_utils.py  time_utils.py
tests/: index.html  test_get_clickup_data.py  test_load.py
tests.pt/: index.html
utils/: index.html
utils.pt/: index.html
