[tool.poetry]
name = "clickup-api"
version = "0.1.0"
description = "MIT"
authors = ["venysssssssssss <shablaur7@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.0"
requests = "^2.31.0"
openpyxl = "^3.1.2"
fastapi = "^0.111.0"
blue = "^0.9.1"
isort = "^5.13.2"
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"
pyngrok = "^7.1.6"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
